# baba_is_you

./: .gitignore  Doxyfile  README.md
Baba_Project/: .gitignore  CMakeLists.txt
Baba_Project/controller/: Controller.cpp  Controller.h  main.cpp
Baba_Project/levels/: save.txt
Baba_Project/model/: Board.cpp  Board.h  Facade.h  Game.cpp  Game.h  Observer.h  Position.cpp  Position.h  Square.cpp  Square.h  Subject.h  TypeCase.h  tests.cpp
Baba_Project/view/: AbstractView.h  QSquare.cpp  QSquare.h  View.cpp  View.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
